[package]
edition = "2018"
name = "engine"
version = "0.1.0"
authors = ["Martin <m.e@acm.org>"]
description = "Example (wumpus game) using the narthex-engine-trait framework"
readme = "README.md"
repository = "https://github.com/martinellison/narthex-wumpus"
license = "MPL-2.0"
keywords = ["portable", "cross-platform"]
publish = false

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.43"
askama = "0.10.5"
getset = "0.1.1"
log = "0.4.14"
narthex_engine_trait = "0.1.0"
rand = "0.8.4"
random = "0.12.2"
serde = "1.0.128"
serde_json = "1.0.66"
strum = {version = "0.21", features = ["derive"]}
