[package]
edition = "2018"
name = "wumpus-c"
version = "0.1.0"
authors = ["Martin <m.e@acm.org>"]
description = "Example (wumpus game) using the narthex-engine-trait framework"
readme = "README.md"
repository = "https://github.com/martinellison/narthex-wumpus"
license = "MPL-2.0"
keywords = ["portable", "cross-platform"]
publish = false

[dependencies]
android_log = "0.1.3"
ansi_term = "0.12.1"
anyhow = "1.0.44"
engine = {path = "../engine"}
libc = "0.2.102"
log = "0.4.14"
narthex_engine_trait = "0.1.0"
serde = "1.0.130"
serde_json = "1.0.68"
strum = {version = "0.21.0", features = ["derive"]}

[lib]
crate-type = ["staticlib", "rlib"]
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
