[package]
authors = ["Martin Ellison <m.e@acm.org>"]
edition = "2018"
name = "wumpus"
version = "0.1.0"
authors = ["Martin <m.e@acm.org>"]
description = "Example (wumpus game) using the narthex-engine-trait framework"
readme = "README.md"
repository = "https://github.com/martinellison/narthex-wumpus"
license = "MPL-2.0"
keywords = ["portable", "cross-platform"]
publish = false

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.44"
engine = {path = "../engine"}
log = {version = "0.4.14", features = ["std"]}
narthex_engine_trait = "0.1.0"
narthex_web_app = "0.1.0"
serde_json = "1.0.68"
simplelog = "0.10.1"
structopt = "0.3.23"
toml = "0.5.8"
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
